completed initialize app